:memo: update jupyter

--- a/Neo4j/jupyter/Neo4j_sample.ipynb
+++ b/Neo4j/jupyter/Neo4j_sample.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-22T06:07:45.653889Z",
-     "start_time": "2019-02-22T06:07:45.526914Z"
+     "end_time": "2019-02-22T07:21:59.840632Z",
+     "start_time": "2019-02-22T07:21:59.819876Z"
     }
    },
    "outputs": [],
@@ -19,54 +19,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-22T06:37:25.836524Z",
-     "start_time": "2019-02-22T06:37:25.760253Z"
+     "end_time": "2019-02-22T07:22:18.999865Z",
+     "start_time": "2019-02-22T07:22:18.959297Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Neo4j Relationship: http://localhost:7474/db/data/relationship/506>"
+       "<Neo4j Relationship: http://localhost:7474/db/data/relationship/508>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "haruka = gdb.nodes.create(name='Haruka', age=21)\n",
-    "tetsuya = gdb.node.create(name='Tetsuya', age=24)\n",
+    "x = gdb.nodes.create(name='x', age=21)\n",
+    "z = gdb.node.create(name='z', age=24)\n",
     "\n",
-    "haruka.relationships.create('Knows', tetsuya, since=2016)"
+    "x.relationships.create('Knows', z, since=2016)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-22T07:08:09.487586Z",
-     "start_time": "2019-02-22T07:08:09.319879Z"
+     "end_time": "2019-02-22T07:22:19.557852Z",
+     "start_time": "2019-02-22T07:22:19.329978Z"
     }
    },
    "outputs": [],
    "source": [
-    "yosarou = gdb.labels.create('Yosarou')\n",
-    "yosarou.add(haruka, tetsuya)"
+    "a = gdb.labels.create('a')\n",
+    "a.add(x, z)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-22T07:08:10.622610Z",
-     "start_time": "2019-02-22T07:08:10.607987Z"
+     "end_time": "2019-02-22T07:22:19.596534Z",
+     "start_time": "2019-02-22T07:22:19.578059Z"
     }
    },
    "outputs": [
@@ -76,25 +76,25 @@
        "\n",
        "        <style type=\"text/css\">\n",
        "        \n",
-       "        #d3_id_9cc96d90-3670-11e9-b871-d20065011101 path.link {\n",
+       "        #d3_id_96d05654-3672-11e9-b462-d20065011101 path.link {\n",
        "            fill: none;\n",
        "            stroke-width: 1.5px;\n",
        "        }\n",
-       "        #d3_id_9cc96d90-3670-11e9-b871-d20065011101 .node {\n",
+       "        #d3_id_96d05654-3672-11e9-b462-d20065011101 .node {\n",
        "            /*fill: #ccc;*/\n",
        "            stroke: #333;\n",
        "            stroke-width: 1.5px;\n",
        "        }\n",
-       "        #d3_id_9cc96d90-3670-11e9-b871-d20065011101 text {\n",
+       "        #d3_id_96d05654-3672-11e9-b462-d20065011101 text {\n",
        "            font: 10px sans-serif;\n",
        "            pointer-events: none;\n",
        "        }\n",
-       "        #d3_id_9cc96d90-3670-11e9-b871-d20065011101 text.shadow {\n",
+       "        #d3_id_96d05654-3672-11e9-b462-d20065011101 text.shadow {\n",
        "            stroke: #fff;\n",
        "            stroke-width: 3px;\n",
        "            stroke-opacity: .8;\n",
        "        }\n",
-       "        #d3_id_9cc96d90-3670-11e9-b871-d20065011101 .node.sticky {\n",
+       "        #d3_id_96d05654-3672-11e9-b462-d20065011101 .node.sticky {\n",
        "            /* stroke-width: 2px; */\n",
        "        }\n",
        "        \n",
@@ -105,14 +105,14 @@
        "                <div class=\"accordion-heading\">\n",
        "                    <a class=\"accordion-toggle collapsed\"\n",
        "                       data-toggle=\"collapse\" data-parent=\"\"\n",
-       "                       href=\"#d3_id_9cc96d90-3670-11e9-b871-d20065011101\">\n",
-       "                        match (n {name: \"Tetsuya\"}) - [r] - (m) return n, r, m\n",
+       "                       href=\"#d3_id_96d05654-3672-11e9-b462-d20065011101\">\n",
+       "                        match (n {name: \"z\"}) - [r] - (m) return n, r, m\n",
        "                    </a>\n",
        "                </div>\n",
-       "                <div id=\"d3_id_9cc96d90-3670-11e9-b871-d20065011101\" class=\"accordion-body in collapse\">\n",
+       "                <div id=\"d3_id_96d05654-3672-11e9-b462-d20065011101\" class=\"accordion-body in collapse\">\n",
        "                    <div class=\"accordion-inner\">\n",
-       "                        <div id=\"d3_id_9cc96d90-3670-11e9-b871-d20065011101_d3c\">\n",
-       "                            <select id=\"d3_id_9cc96d90-3670-11e9-b871-d20065011101_d3c_display\">\n",
+       "                        <div id=\"d3_id_96d05654-3672-11e9-b462-d20065011101_d3c\">\n",
+       "                            <select id=\"d3_id_96d05654-3672-11e9-b462-d20065011101_d3c_display\">\n",
        "                                <option value=\"\">ID</option>\n",
        "                            </select>\n",
        "                        </div>\n",
@@ -123,11 +123,11 @@
        "\n",
        "        <script>\n",
        "            var neo4jrestclient = window.neo4jrestclient || {};\n",
-       "            neo4jrestclient['9cc96d90-3670-11e9-b871-d20065011101'] = {};\n",
-       "            neo4jrestclient['9cc96d90-3670-11e9-b871-d20065011101'].graph = {\"directed\": true, \"graph\": [], \"multigraph\": true, \"links\": [{\"id\": \"506\", \"source\": \"342\", \"stroke\": \"black\", \"target\": \"343\", \"label\": \"Knows\", \"properties\": {\"since\": 2016}}], \"nodes\": {\"342\": {\"fill\": \"white\", \"id\": \"342\", \"label\": \"342\", \"properties\": {\"name\": \"Haruka\", \"age\": 21}}, \"343\": {\"fill\": \"white\", \"id\": \"343\", \"label\": \"343\", \"properties\": {\"name\": \"Tetsuya\", \"age\": 24}}}, \"properties\": [\"age\", \"name\"]};\n",
-       "            neo4jrestclient['9cc96d90-3670-11e9-b871-d20065011101'].container_id = \"d3_id_9cc96d90-3670-11e9-b871-d20065011101_d3c\";\n",
-       "            neo4jrestclient['9cc96d90-3670-11e9-b871-d20065011101'].container = \"#d3_id_9cc96d90-3670-11e9-b871-d20065011101_d3c\";\n",
-       "            neo4jrestclient['9cc96d90-3670-11e9-b871-d20065011101'].render = function () {\n",
+       "            neo4jrestclient['96d05654-3672-11e9-b462-d20065011101'] = {};\n",
+       "            neo4jrestclient['96d05654-3672-11e9-b462-d20065011101'].graph = {\"directed\": true, \"graph\": [], \"multigraph\": true, \"links\": [{\"id\": \"508\", \"source\": \"346\", \"stroke\": \"black\", \"target\": \"347\", \"label\": \"Knows\", \"properties\": {\"since\": 2016}}], \"nodes\": {\"346\": {\"fill\": \"white\", \"id\": \"346\", \"label\": \"346\", \"properties\": {\"name\": \"x\", \"age\": 21}}, \"347\": {\"fill\": \"white\", \"id\": \"347\", \"label\": \"347\", \"properties\": {\"name\": \"z\", \"age\": 24}}}, \"properties\": [\"age\", \"name\"]};\n",
+       "            neo4jrestclient['96d05654-3672-11e9-b462-d20065011101'].container_id = \"d3_id_96d05654-3672-11e9-b462-d20065011101_d3c\";\n",
+       "            neo4jrestclient['96d05654-3672-11e9-b462-d20065011101'].container = \"#d3_id_96d05654-3672-11e9-b462-d20065011101_d3c\";\n",
+       "            neo4jrestclient['96d05654-3672-11e9-b462-d20065011101'].render = function () {\n",
        "                (function (graph, container, width, height) {\n",
        "                    \n",
        "        var links = graph.links;\n",
@@ -251,8 +251,8 @@
        "        });\n",
        "        \n",
        "                })(\n",
-       "                    neo4jrestclient['9cc96d90-3670-11e9-b871-d20065011101'].graph,\n",
-       "                    neo4jrestclient['9cc96d90-3670-11e9-b871-d20065011101'].container,\n",
+       "                    neo4jrestclient['96d05654-3672-11e9-b462-d20065011101'].graph,\n",
+       "                    neo4jrestclient['96d05654-3672-11e9-b462-d20065011101'].container,\n",
        "                    null,\n",
        "                    300\n",
        "                );\n",
@@ -260,25 +260,25 @@
        "            if (!window.d3) {\n",
        "                $.getScript(\n",
        "                    \"//d3js.org/d3.v2.js?2.9.1\",\n",
-       "                    neo4jrestclient['9cc96d90-3670-11e9-b871-d20065011101'].render\n",
+       "                    neo4jrestclient['96d05654-3672-11e9-b462-d20065011101'].render\n",
        "                );\n",
        "            } else {\n",
-       "                neo4jrestclient['9cc96d90-3670-11e9-b871-d20065011101'].render();\n",
+       "                neo4jrestclient['96d05654-3672-11e9-b462-d20065011101'].render();\n",
        "            }\n",
        "        </script>\n",
        "        "
       ],
       "text/plain": [
-       "<neo4jrestclient.query.QuerySequence at 0x11bc85e10>"
+       "<neo4jrestclient.query.QuerySequence at 0x11ce6aba8>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "gdb.query('match (n {name: \"Tetsuya\"}) - [r] - (m) return n, r, m', data_contents=True)"
+    "gdb.query('match (n {name: \"z\"}) - [r] - (m) return n, r, m', data_contents=True)"
    ]
   },
   {
